--- a/apple.html
+++ b/apple.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
-    <header><img src="apple clone 1.png" width="20" height="20" alt="logo">
-    Store Mac iPad iphone Watch Airpods TV & Homes Entertaiment Accessorise Support
-    </header>
+    <header>
+        <div>
+            <img src="apple clone 1.png" width="20" height="20" alt="logo">
+        Store Mac iPad iphone Watch Airpods TV & Homes Entertaiment Accessorise Support
+        </div>
     <link rel="stylesheet" href="apple.css">
-    <div><h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
+    </header>
+    <h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
         products with eligible cards.</h4>
     <h1>Store.The best way to buy the products you love.</h1>
     <img src="apple3.png" width="120" height="78"><p>mac</p>
