--- a/apple.html
+++ b/apple.html
@@ -12,7 +12,7 @@
     <header>
         <div>
             <img src="apple clone 1.png" width="20" height="20" alt="logo">
-        Store Mac iPad iphone Watch Airpods TV & Homes Entertaiment Accessorise Support
+            <a>Store</a> <a>Mac</a> <a>iPad</a> <a>iphone</a> <a>Watch</a> <a>Airpods</a> <a>TV & Homes</a> <a>Entertaiment </a> <a>Accessorise </a> <a>Support</a>                 
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
