--- a/apple.html
+++ b/apple.html
@@ -12,7 +12,7 @@
     <header>
         <div>
             <img src="apple clone 1.png" width="20" height="20" alt="logo">
-            <a>Store</a> <a>Mac</a> <a>iPad</a> <a>iphone</a> <a>Watch</a> <a>Airpods</a> <a>TV & Homes</a> <a>Entertaiment </a> <a>Accessorise </a> <a>Support</a>                 
+            <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
