--- a/apple.html
+++ b/apple.html
@@ -19,15 +19,15 @@
     <h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
         products with eligible cards.</h4>
     <h1>Store.The best way to buy the products you love.</h1>
-    <img src="apple3.png" width="120" height="78"><p>mac</p>
-    <img src="apple4.png" width="120" height="78" alt="iphone"><p>iphone</p>
-    <img src="apple5.png" width="120" height="78" alt="iPad"><p>iPad</p>
-    <img src="apple6.png" width="120" height="78" alt="Apple Watch"><p>Apple Watch</p>
-    <img src="apple7.png" width="120" height="78" alt="AirPods"><p>AirPods</p>
-    <img src="apple8.png" width="120" height="78" alt="AirTag"><p>AirTag</p>
-    <img src="apple9.png" width="120" height="78" alt="Apple TV 4K"><p>Apple TV 4K</p>
-    <img src="apple10.png" width="120" height="78" alt="Homepod"><p>Homepod</p>
-    <img src="apple11.png" width="120" height="78" alt="Accessories"><p>Accessories</p>
+    <a href="https://www.apple.com/in/shop/buy-mac"><img src="apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
+    <a href="https://www.apple.com/in/shop/buy-iphone"><img src="apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
+    <a href="https://www.apple.com/in/shop/buy-ipad"><img src="apple5.png" width="120" height="78" alt="iPad"></a><p><a href="https://www.apple.com/in/shop/buy-ipad">iPad</p></a>
+    <a href="https://www.apple.com/in/shop/buy-watch"><img src="apple6.png" width="120" height="78" alt="Apple Watch"></a><p><a href="https://www.apple.com/in/shop/buy-watch">Apple Watch</p></a>
+    <a href="https://www.apple.com/in/airpods/"><img src="apple7.png" width="120" height="78" alt="AirPods"></a><p><a href="https://www.apple.com/in/airpods/">AirPods</p></a>
+    <a href="https://www.apple.com/in/shop/accessories/all/airtag"><img src="apple8.png" width="120" height="78" alt="AirTag"></a><p><a href="https://www.apple.com/in/shop/accessories/all/airtag">AirTag</p></a>
+    <a href="https://www.apple.com/in/apple-tv-4k/"><img src="apple9.png" width="120" height="78" alt="Apple TV 4K"></a><p><a href="https://www.apple.com/in/apple-tv-4k/">Apple TV 4K</p></a>
+    <a href=""><img src="apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
+    <a href=""><img src="apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
     <h2>The latest. Take a look at what’s new right now.</h2>
     <img abc src="apple13.jpeg" width="260" height="450">
     <img src="apple14.jpeg" width="260" height="450">
