--- a/apple.html
+++ b/apple.html
@@ -16,8 +16,8 @@
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
-    <h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
-        products with eligible cards.</h4>
+    <div><h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
+        products with eligible cards.</h4></div>
     <h1>Store.The best way to buy the products you love.</h1>
     <a href="https://www.apple.com/in/shop/buy-mac"><img src="apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
     <a href="https://www.apple.com/in/shop/buy-iphone"><img src="apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
