--- a/apple.html
+++ b/apple.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <img src="apple clone 1.png" width="20" height="20" alt="logo">
+            <img src="images\apple clone 1.png" width="20" height="20" alt="logo">
             <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
         </div>
     <link rel="stylesheet" href="apple.css">
@@ -19,28 +19,28 @@
     <div><h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
         products with eligible cards.</h4></div>
     <h1>Store.The best way to buy the products you love.</h1>
-    <a href="https://www.apple.com/in/shop/buy-mac"><img src="apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
-    <a href="https://www.apple.com/in/shop/buy-iphone"><img src="apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
-    <a href="https://www.apple.com/in/shop/buy-ipad"><img src="apple5.png" width="120" height="78" alt="iPad"></a><p><a href="https://www.apple.com/in/shop/buy-ipad">iPad</p></a>
-    <a href="https://www.apple.com/in/shop/buy-watch"><img src="apple6.png" width="120" height="78" alt="Apple Watch"></a><p><a href="https://www.apple.com/in/shop/buy-watch">Apple Watch</p></a>
-    <a href="https://www.apple.com/in/airpods/"><img src="apple7.png" width="120" height="78" alt="AirPods"></a><p><a href="https://www.apple.com/in/airpods/">AirPods</p></a>
-    <a href="https://www.apple.com/in/shop/accessories/all/airtag"><img src="apple8.png" width="120" height="78" alt="AirTag"></a><p><a href="https://www.apple.com/in/shop/accessories/all/airtag">AirTag</p></a>
-    <a href="https://www.apple.com/in/apple-tv-4k/"><img src="apple9.png" width="120" height="78" alt="Apple TV 4K"></a><p><a href="https://www.apple.com/in/apple-tv-4k/">Apple TV 4K</p></a>
-    <a href=""><img src="apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
-    <a href=""><img src="apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
+    <a href="https://www.apple.com/in/shop/buy-mac"><img src="images\apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
+    <a href="https://www.apple.com/in/shop/buy-iphone"><img src="images\apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
+    <a href="https://www.apple.com/in/shop/buy-ipad"><img src="images\apple5.png" width="120" height="78" alt="iPad"></a><p><a href="https://www.apple.com/in/shop/buy-ipad">iPad</p></a>
+    <a href="https://www.apple.com/in/shop/buy-watch"><img src="images\apple6.png" width="120" height="78" alt="Apple Watch"></a><p><a href="https://www.apple.com/in/shop/buy-watch">Apple Watch</p></a>
+    <a href="https://www.apple.com/in/airpods/"><img src="images\apple7.png" width="120" height="78" alt="AirPods"></a><p><a href="https://www.apple.com/in/airpods/">AirPods</p></a>
+    <a href="https://www.apple.com/in/shop/accessories/all/airtag"><img src="images\apple8.png" width="120" height="78" alt="AirTag"></a><p><a href="https://www.apple.com/in/shop/accessories/all/airtag">AirTag</p></a>
+    <a href="https://www.apple.com/in/apple-tv-4k/"><img src="images\apple9.png" width="120" height="78" alt="Apple TV 4K"></a><p><a href="https://www.apple.com/in/apple-tv-4k/">Apple TV 4K</p></a>
+    <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
+    <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
     <h2>The latest. Take a look at what’s new right now.</h2>
-    <img abc src="apple13.jpeg" width="260" height="450">
-    <img src="apple14.jpeg" width="260" height="450">
-    <img src="apple15.jpeg" width="260" height="450">
-    <img src="appple16.jpeg" width="260" height="450">
-    <img src="apple18.jpeg" width="260" height="450">
-    <img src="apple19.jpeg" width="260" height="450">
-    <img src="apple20.jpeg" width="260" height="450">
-    <img src="apple21.jpeg" width="260" height="450">
-    <img src="apple22.jpeg" width="260" height="450">
-    <img src="apple23.jpeg" width="260" height="450">
-    <img src="apple24.jpeg" width="260" height="450">
-    <img src="apple26.jpeg" width="260" height="450">
+    <img abc src="images\apple13.jpeg" width="260" height="450">
+    <img src="images\apple14.jpeg" width="260" height="450">
+    <img src="images\apple15.jpeg" width="260" height="450">
+    <img src="images\appple16.jpeg" width="260" height="450">
+    <img src="images\apple18.jpeg" width="260" height="450">
+    <img src="images\apple19.jpeg" width="260" height="450">
+    <img src="images\apple20.jpeg" width="260" height="450">
+    <img src="images\apple21.jpeg" width="260" height="450">
+    <img src="images\apple22.jpeg" width="260" height="450">
+    <img src="images\apple23.jpeg" width="260" height="450">
+    <img src="images\apple24.jpeg" width="260" height="450">
+    <img src="images\apple26.jpeg" width="260" height="450">
     <h2>Help is here. Whenever and however you need it.</h2>
     <h2>The Apple Store difference. Even more reasons to shop with us.</h2>
 
