--- a/apple.html
+++ b/apple.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link aria-setsize="05" rel="icon" href="apple clone 1.png" type="icon type">
+    <link aria-setsize="05" rel="icon" href="images/apple clone 1.png" type="icon type">
     <title>Apple Store online- Apple (IN) </title>
 </head>
 
@@ -29,7 +29,7 @@
     <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
     <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
     <h2>The latest. Take a look at what’s new right now.</h2>
-    <img abc src="images\apple13.jpeg" width="260" height="450">
+    <img src="images\apple13.jpeg" width="260" height="450">
     <img src="images\apple14.jpeg" width="260" height="450">
     <img src="images\apple15.jpeg" width="260" height="450">
     <img src="images\appple16.jpeg" width="260" height="450">
