--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div>
             <img src="images\apple clone 1.png" width="20" height="20" alt="logo">
-            <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
+            <a href="images/apple clone 1.png">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
