--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link aria-setsize="05" rel="icon" href="images/apple clone 1.png" type="icon type">
+    <link aria-setsize="05" rel="icon" href="logo.svg" type="icon type">
     <title>Apple Store online- Apple (IN) </title>
 </head>
 
 <body>
+    <main>
     <header>
-        <div>
-            <img src="images\apple clone 1.png" width="20" height="20" alt="logo">
-            <a href="images/apple clone 1.png">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
+        <div class="navbar">
+            <img src="logo.svg" alt="logo">
+            <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
@@ -29,20 +30,28 @@
     <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
     <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
     <h2>The latest. Take a look at what’s new right now.</h2>
-    <img src="images\apple13.jpeg" width="260" height="450">
-    <img src="images\apple14.jpeg" width="260" height="450">
-    <img src="images\apple15.jpeg" width="260" height="450">
-    <img src="images\appple16.jpeg" width="260" height="450">
-    <img src="images\apple18.jpeg" width="260" height="450">
-    <img src="images\apple19.jpeg" width="260" height="450">
-    <img src="images\apple20.jpeg" width="260" height="450">
-    <img src="images\apple21.jpeg" width="260" height="450">
-    <img src="images\apple22.jpeg" width="260" height="450">
-    <img src="images\apple23.jpeg" width="260" height="450">
-    <img src="images\apple24.jpeg" width="260" height="450">
-    <img src="images\apple26.jpeg" width="260" height="450">
+        <div class="midmain">
+            <nav>
+                MacBook Air
+            </nav> 
+            <div class="mid">
+            <img src="images\apple13.jpeg" width="260" height="450">
+            <img src="images\apple14.jpeg" width="260" height="450">
+            <img src="images\apple15.jpeg" width="260" height="450">
+            <img src="images\appple16.jpeg" width="260" height="450">
+            <img src="images\apple18.jpeg" width="260" height="450">
+            <img src="images\apple19.jpeg" width="260" height="450">
+            <img src="images\apple20.jpeg" width="260" height="450">
+            <img src="images\apple21.jpeg" width="260" height="450">
+            <img src="images\apple22.jpeg" width="260" height="450">
+            <img src="images\apple23.jpeg" width="260" height="450">
+            <img src="images\apple24.jpeg" width="260" height="450">
+            <img src="images\apple26.jpeg" width="260" height="450">
+            </div>
+        </div>
     <h2>Help is here. Whenever and however you need it.</h2>
     <h2>The Apple Store difference. Even more reasons to shop with us.</h2>
+    </main>
 
 </body>
 
