--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
-    <div><h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
-        products with eligible cards.</h4></div>
+    <div>
+        <h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
+        products with eligible cards.</h4>
+    </div>
     <h1>Store.The best way to buy the products you love.</h1>
     <a href="https://www.apple.com/in/shop/buy-mac"><img src="images\apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
     <a href="https://www.apple.com/in/shop/buy-iphone"><img src="images\apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
@@ -30,23 +32,60 @@
     <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
     <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
     <h2>The latest. Take a look at what’s new right now.</h2>
-        <div class="midmain">
-            <nav>
-                MacBook Air
-            </nav> 
-            <div class="mid">
-            <img src="images\apple13.jpeg" width="260" height="450">
-            <img src="images\apple14.jpeg" width="260" height="450">
-            <img src="images\apple15.jpeg" width="260" height="450">
-            <img src="images\appple16.jpeg" width="260" height="450">
-            <img src="images\apple18.jpeg" width="260" height="450">
-            <img src="images\apple19.jpeg" width="260" height="450">
-            <img src="images\apple20.jpeg" width="260" height="450">
-            <img src="images\apple21.jpeg" width="260" height="450">
-            <img src="images\apple22.jpeg" width="260" height="450">
-            <img src="images\apple23.jpeg" width="260" height="450">
-            <img src="images\apple24.jpeg" width="260" height="450">
-            <img src="images\apple26.jpeg" width="260" height="450">
+        <div class="options">
+            <div class="options1">
+                <img src="images/macbook air.jpeg" width="300" height="450">
+                <div class="label">MacBook Air</div>
+                <h6>Apple Intelligence</h6>
+                <h6>From rupees99900.00</h6>
+            </div>
+            <div class="options1">
+                <img src="images/iPhone 16 Pro.jpeg" width="300" height="450">
+                <div class="label" style="color: white;"> iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/iPad Air.jpeg" width="300" height="450">
+                <div class="label">iPad Air</div>
+            </div>
+            <div class="options1">
+                <img src="images/strips.png" width="300" height="450">
+                <div class="label">iPad Air</div>
+            </div>
+            <div class="options1">
+                <img src="images/Apple Watch Series 10.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/special offers.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/iPhone 16e.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/iPad.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/iPad Air.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/Mac Studio.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/iPhone 16.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/Apple Watch Ultra 2.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
+            </div>
+            <div class="options1">
+                <img src="images/Watch straps.jpeg" width="300" height="450">
+                <div class="label">iPhone 16 Pro</div>
             </div>
         </div>
     <h2>Help is here. Whenever and however you need it.</h2>
