--- a/index.html
+++ b/index.html
@@ -13,31 +13,63 @@
     <header>
         <div class="navbar">
             <img src="logo.svg" alt="logo">
-            <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>                
+            <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>
+            <img src="search.svg" alt="search">    
+            <img src="cart.svg" alt="">            
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
     <div>
-        <h4>Get up to 12 months of No Cost EMI Footnote § plus up to ₹8000.00 instant cashback Footnote §§ on selected
-        products with eligible cards.</h4>
+        <p>Get up to 12 months of No Cost EMI<sup>§</sup> Footnote plus up to ₹8000.00 instant cashback<sup>§§</sup> on selected
+        products with eligible cards.</p>
     </div>
     <h1>Store.The best way to buy the products you love.</h1>
-    <a href="https://www.apple.com/in/shop/buy-mac"><img src="images\apple3.png" width="120" height="78"></a><p><a href="https://www.apple.com/in/shop/buy-mac">mac</p></a>
-    <a href="https://www.apple.com/in/shop/buy-iphone"><img src="images\apple4.png" width="120" height="78" alt="iphone"></a><p><a href="https://www.apple.com/in/shop/buy-iphone">iphone</p></a>
-    <a href="https://www.apple.com/in/shop/buy-ipad"><img src="images\apple5.png" width="120" height="78" alt="iPad"></a><p><a href="https://www.apple.com/in/shop/buy-ipad">iPad</p></a>
-    <a href="https://www.apple.com/in/shop/buy-watch"><img src="images\apple6.png" width="120" height="78" alt="Apple Watch"></a><p><a href="https://www.apple.com/in/shop/buy-watch">Apple Watch</p></a>
-    <a href="https://www.apple.com/in/airpods/"><img src="images\apple7.png" width="120" height="78" alt="AirPods"></a><p><a href="https://www.apple.com/in/airpods/">AirPods</p></a>
-    <a href="https://www.apple.com/in/shop/accessories/all/airtag"><img src="images\apple8.png" width="120" height="78" alt="AirTag"></a><p><a href="https://www.apple.com/in/shop/accessories/all/airtag">AirTag</p></a>
-    <a href="https://www.apple.com/in/apple-tv-4k/"><img src="images\apple9.png" width="120" height="78" alt="Apple TV 4K"></a><p><a href="https://www.apple.com/in/apple-tv-4k/">Apple TV 4K</p></a>
-    <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a><p><a href="">Homepod</p></a>
-    <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a><p><a href="">Accessories</p></a>
+        <div class="options">
+            <div>
+                <a href="https://www.apple.com/in/shop/buy-mac"><img src="images/apple3.png" width="120" height="78" style="color: transparent;"></a>
+                <a href="https://www.apple.com/in/shop/buy-mac">mac</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/shop/buy-iphone"><img src="images\apple4.png" width="120" height="78" alt="iphone"></a>
+                <a href="https://www.apple.com/in/shop/buy-iphone">iphone</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/shop/buy-ipad"><img src="images\apple5.png" width="120" height="78" alt="iPad"></a>
+                <a href="https://www.apple.com/in/shop/buy-ipad">iPad</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/shop/buy-watch"><img src="images\apple6.png" width="120" height="78" alt="Apple Watch"></a>
+                <a href="https://www.apple.com/in/shop/buy-watch">Apple Watch</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/airpods/"><img src="images\apple7.png" width="120" height="78" alt="AirPods"></a>
+                <a href="https://www.apple.com/in/airpods/">AirPods</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/shop/accessories/all/airtag"><img src="images\apple8.png" width="120" height="78" alt="AirTag"></a>
+                <a href="https://www.apple.com/in/shop/accessories/all/airtag">AirTag</a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/in/apple-tv-4k/"><img src="images\apple9.png" width="120" height="78" alt="Apple TV 4K"></a>
+                <a href="https://www.apple.com/in/apple-tv-4k/">Apple TV 4K</a>
+            </div>
+            <div>
+                <a href=""><img src="images\apple10.png" width="120" height="78" alt="Homepod"></a>
+                <a href="">Homepod</a>
+            </div>
+            <div>
+                <a href=""><img src="images\apple11.png" width="120" height="78" alt="Accessories"></a>
+                <a href="">Accessories</a>
+            </div>                
+        </div>
+    <img src="" alt="">
     <h2>The latest. Take a look at what’s new right now.</h2>
         <div class="options">
             <div class="options1">
                 <img src="images/macbook air.jpeg" width="300" height="450">
                 <div class="label">MacBook Air</div>
                 <h6>Apple Intelligence</h6>
-                <h6>From rupees99900.00</h6>
+                <h6>From ₹99900.00</h6>
             </div>
             <div class="options1">
                 <img src="images/iPhone 16 Pro.jpeg" width="300" height="450">
