--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="apple.css">
     </header>
     <div>
-        <p>Get up to 12 months of No Cost EMI<sup>§</sup> Footnote plus up to ₹8000.00 instant cashback<sup>§§</sup> on selected
+        <p>Get up to 12 months of No Cost EMI<sup style="background-color: transparent;">§</sup> Footnote plus up to ₹8000.00 instant cashback<sup style="background-color: transparent;">§§</sup> on selected
         products with eligible cards.</p>
     </div>
     <h1>Store.The best way to buy the products you love.</h1>
