--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </div>
     <h2>Help is here. Whenever and however you need it.</h2>
     <h2>The Apple Store difference. Even more reasons to shop with us.</h2>
+    <script src="script.js"></script>
     </main>
 
 </body>
