--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="logo.svg" alt="logo">
             <a href="#">Store</a> <a href="#">Mac</a> <a href="#">iPad</a> <a href="#">iphone</a> <a href="#">Watch</a> <a href="#">Airpods</a> <a href="#">TV & Homes</a> <a href="#">Entertaiment </a> <a href="#">Accessorise </a> <a href="#">Support</a>
             <img src="search.svg" alt="search">    
-            <img src="cart.svg" alt="">            
+            <img src="cart.svg" alt="cart">            
         </div>
     <link rel="stylesheet" href="apple.css">
     </header>
@@ -23,7 +23,7 @@
         <p>Get up to 12 months of No Cost EMI<sup style="background-color: transparent;">§</sup> Footnote plus up to ₹8000.00 instant cashback<sup style="background-color: transparent;">§§</sup> on selected
         products with eligible cards.</p>
     </div>
-    <h1>Store.The best way to buy the products you love.</h1>
+        <h1>Store.The best way to buy the products you love.</h1>
         <div class="options">
             <div>
                 <a href="https://www.apple.com/in/shop/buy-mac"><img src="images/apple3.png" width="120" height="78" style="color: transparent;"></a>
