--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Store.The best way to buy the products you love.</h1>
         <div class="options">
             <div>
-                <a href="https://www.apple.com/in/shop/buy-mac"><img src="images/apple3.png" width="120" height="78" style="color: transparent;"></a>
+                <a href="https://www.apple.com/in/shop/buy-mac"><img src="images\apple3.png" width="120" height="78" style="color: transparent;"></a>
                 <a href="https://www.apple.com/in/shop/buy-mac">mac</a>
             </div>
             <div>
